correccion textos index

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,10 +27,13 @@
             <img class="rectangle" src="../img/rectangle-3.png"/>
             <div class="text-wrapper">¿Qué es el proyecto APIEDU?</div>
             <p class="p">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mi lacinia, blandit dui at, accumsan
-                turpis. Vestibulum placerat cursus turpis, sit amet sagittis justo venenatis non. Nam vitae fermentum
-                sem. Pellentesque vulputate ullamcorper lobortis. Sed lacus dui, tempor sit amet ex sit amet, fermentum
-                tincidunt lorem. Donec ac velit neque. Donec id egestas libero. Nam tincidunt eu turpis sed vulputate.
+                El proyecto se centra en una plataforma educativa diseñada para mejorar el aprendizaje en el campo de la
+                Administración de Proyectos Informáticos de manera automatizada. Su objetivo principal es proporcionar
+                acceso a contenido educativo de alta calidad para aspirantes, estudiantes y otros interesados en esta
+                disciplina. Además, ofrece a docentes y expertos la posibilidad de publicar sus conocimientos y
+                materiales didácticos, así como de evaluar el contenido disponible. Esta plataforma crea un entorno
+                colaborativo que facilita el aprendizaje efectivo y el intercambio de conocimientos entre todos sus
+                usuarios.
             </p>
             <div class="cuadro-explicacion-2"></div>
             <div class="cuadro-explicacion-3"></div>
@@ -39,12 +42,9 @@
             <img class="img-sirve-para" src="../img/subida.png"/>
             <img class="img-sirve-para-2" src="../img/lectura.png"/>
             <p class="text-wrapper-3">
-                Fusce accumsan a justo id dapibus. In non leo enim. Vivamus nisl enim, mattis at iaculis et, laoreet at
-                eros. Pellentesque fringilla ex et metus tincidunt aliquam. Nunc porttitor nunc in consectetur egestas.
-                Sed sit amet augue et orci pretium ultrices id ut arcu. In at tincidunt leo. Class aptent taciti
-                sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla in velit sodales justo
-                laoreet aliquam. Proin eget libero varius lectus luctus tincidunt. Duis auctor justo libero, nec
-                tincidunt ex condimentum sit amet. Nulla mattis maximus eros a ullamcorper.
+                El objetivo de la plataforma es mejorar el aprendizaje de aspirantes, estudiantes y otros interesados en
+                la materia de Administración de Proyectos Informáticos de manera automatizada. Además, la plataforma
+                permite a docentes y expertos en el área publicar y evaluar su contenido.
             </p>
             <img class="img-sirve-para-3" src="../img/evaluacion.png"/>
             <div class="text-wrapper-4">CARGA</div>
