--- a/src/main/resources/templates/usuarios/verUsuarios.html
+++ b/src/main/resources/templates/usuarios/verUsuarios.html
@@ -8,7 +8,7 @@
     <div th:replace="~{menu.html}"></div>
 
     <div class="contenedor-principal" id="contenedor-move">
-        <a class="boton-volver" href="/temas">VOLVER</a>
+        <a class="boton-volver" href="/unidades">VOLVER</a>
         <div class="contenedor-play-subproyecto">
             <div class="proyecto-play">
                 <div class="contenedor-proyecto">
